# py-datasette-ncovid

./: README.md  pyproject.toml  requirements.txt
scripts/: create_sqlite.sh  run.sh
scripts/hawaii/: create_sqlite.sh  deploy.sh  download.sh  run.sh
scripts/lancet/: download.sh
