[tool.poetry]
name = "py-datasette-ncovid"
version = "0.1.0"
description = ""
authors = ["Ryan <ryankanno@localkinegrinds.com>"]

[tool.poetry.dependencies]
python = "^3.7"
csvs-to-sqlite = "^1.0"
datasette = "^0.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
